--- a/website/main/templates/main/base.html
+++ b/website/main/templates/main/base.html
@@ -22,15 +22,22 @@
                         <a class="nav-link" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/create-post">Home</a>
+                        <a class="nav-link" href="/create-post">Post</a>
                     </li>
                 </ul>
             </div>
             <div>
                 <ul class="navbar-nav">
+	                {% if user.is_authenticated %}
+	                <span class="navbar-text">Logged in as {{user.username}} | </span>
                     <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+	                {% else %}
+	                <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
+	                {% endif %}
                 </ul>
             </div>
         </div>
