--- a/website/main/templates/main/home.html
+++ b/website/main/templates/main/home.html
@@ -10,10 +10,30 @@
 			<p>{{post.description}}</p>
 		</div>
 		<div>
-			{% if user == post.author %}
+			{% if user == post.author or perms.main.delete_post %}
 				<form method="post">
 					{% csrf_token %}
-					<button type="submit" class="btn btn-danger" name="post-id" value="{{post.id}}">Delete</button>
+					<button
+							type="submit"
+							class="btn btn-danger"
+							name="post-id"
+							value="{{post.id}}"
+					>
+						Delete
+					</button>
+				</form>
+			{% endif %}
+			{% if user.is_staff %}
+			<form method="post">
+					{% csrf_token %}
+					<button
+							type="submit"
+							class="btn btn-warning"
+							name="user-id"
+							value="{{post.author.id}}"
+					>
+						Ban User
+					</button>
 				</form>
 			{% endif %}
 		</div>
